--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,15 +1,15 @@
 {% load static %}
 <html>
   <head>
-    <title>Django Girls blog</title>
+    <title>Programacion Comercial</title>
+    <!-- CSS only -->
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="/   bootstrap/3.2.0/css/bootstrap.min.css"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link
       href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext"
       rel="stylesheet"
@@ -18,20 +18,43 @@
     <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
   </head>
   <body>
-    <body>
-      <div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
-        {% if user.is_authenticated %}
-        <a href="{% url 'post_new' %}" class="top-menu"
-          ><span class="glyphicon glyphicon-plus"></span
-        ></a>
-        {% endif %}
-      </div>
-      <div class="content container">
-        <div class="row">
-          <div class="col-md-8">{% block content %} {% endblock %}</div>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Django Blog / Progra comercial</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          </ul>
+            <li class="nav-item">
+                {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu material-symbols-outlined" style='text-decoration: none'>
+                  add
+                </a>
+                {% endif %}
+              </li>
         </div>
       </div>
-    </body>
+    </nav>
+    <div class="content container">
+      <div class="row">
+        <div class="col-sm-6 p-3">{% block content %} {% endblock %}</div>
+      </div>
+    </div>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
